# Robocooler

./: CMakeLists.txt
cmake/: FindLibEvent.cmake  FindThrift.cmake  TakeComponent.cmake  UTest.cmake
docs/: RoboIceBox.dia
src/driver/: Bases.hpp  CMakeLists.txt  CommandHandler.cpp  CommandHandler.hpp  GpioController.cpp  GpioController.hpp  JsonExtractor.cpp  JsonExtractor.hpp  LogSender.cpp  LogSender.hpp  RfidController.cpp  RfidController.hpp  WsClient.cpp  WsClient.hpp  WsClientWorker.cpp  WsClientWorker.hpp  driver.cpp
src/rfid/: CMakeLists.txt  Commands.cpp  Commands.hpp  CommandsHandler.cpp  CommandsHandler.hpp  Message.cpp  Message.hpp
src/scripts/: async_run.py  chromium-browser.desktop  configure_apache2.sh  driver-service.sh  driver.sh  generate_certificate.sh  install.sh  install_driver.sh
src/tests/: CMakeLists.txt  ut_boost_regex.cpp  ut_command_handler.cpp  ut_json_extractor.cpp  ut_product_send.cpp
src/tools/: CMakeLists.txt  gpio_doors_switch.cpp  rfid_io.cpp  rfid_reader.cpp  tty_io.cpp  ws_client.cpp
src/utils/: CMakeLists.txt  Demangle.hpp  FibonacciReduction.cpp  FibonacciReduction.hpp  ForEachTuple.hpp  Log.cpp  Log.hpp  RoomController.hpp  ServiceHandler.cpp  ServiceHandler.hpp  SignalDispatcher.cpp  SignalDispatcher.hpp  Singleton.hpp  Strhex2Hex.cpp  Strhex2Hex.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.hpp  TtyIo.cpp  TtyIo.hpp
src/websocketpp/processors/: hybi13.hpp
